--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-node": "node --loader ts-node/esm src/index.ts",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "yarn install && yarn tsc"
+    "build": "tsc",
+    "postinstall": "yarn build"
   },
   "author": "",
   "license": "ISC",
@@ -25,5 +26,8 @@
     "express": "^4.18.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
+  },
+  "engines": {
+    "node": ">=14.x"
   }
 }
