--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-node": "node --loader ts-node/esm src/index.ts",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "postinstall": "yarn build && yarn start"
+    "postinstall": "tsc && yarn start"
   },
   "author": "",
   "license": "ISC",
